# Stop_Watch

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  i2c_bus.c  i2c_bus.h  idf_component.yml  ir_test.c  main.cpp  main.cpp.lowpower  mesh_stick_green.c  mesh_stick_pink.c  test.pcm
main/UI/: ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
main/UI/components/: ui_comp.c  ui_comp.h  ui_comp_batterygroup.c  ui_comp_batterygroup.h  ui_comp_buttondown.c  ui_comp_buttondown.h  ui_comp_buttonround.c  ui_comp_buttonround.h  ui_comp_buttontop.c  ui_comp_buttontop.h  ui_comp_dailymissiongroup.c  ui_comp_dailymissiongroup.h  ui_comp_dategroup.c  ui_comp_dategroup.h  ui_comp_forecastgroup.c  ui_comp_forecastgroup.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_pulsegroup.c  ui_comp_pulsegroup.h  ui_comp_stepgroup.c  ui_comp_stepgroup.h  ui_comp_titlegroup.c  ui_comp_titlegroup.h  ui_comp_todayweathergroup.c  ui_comp_todayweathergroup.h  ui_comp_weathergroup1.c  ui_comp_weathergroup1.h
main/UI/custom/: lv_analogclock.c  lv_analogclock.h  lv_dclock.c  lv_dclock.h
main/UI/images/: ui_img_bg1_png.c  ui_img_bg2_png.c  ui_img_bg3_png.c  ui_img_btn_bg_1_png.c  ui_img_btn_bg_2_png.c  ui_img_btn_bg_3_png.c  ui_img_call1_png.c  ui_img_call2_png.c  ui_img_clockwise_hour_png.c  ui_img_clockwise_min_png.c  ui_img_clockwise_sec_png.c  ui_img_clouds_png.c  ui_img_daily_mission_png.c  ui_img_flash_png.c  ui_img_heart2_png.c  ui_img_heart_png.c  ui_img_house_png.c  ui_img_measure_png.c  ui_img_mute_png.c  ui_img_rain_png.c  ui_img_s1_png.c  ui_img_s2_png.c  ui_img_s3_png.c  ui_img_s4_png.c  (+20 more)
main/custom/: lv_analogclock.c
main/es8311/: es8311.c  es8311.h  esxxx_common.h
main/user_driver/: aw32001_driver.c  aw32001_driver.h  bmi270_driver.c  bmi270_driver.h  bq27220_driver.c  bq27220_driver.h  cst820_driver.c  cst820_driver.h  cst9217_driver.c  cst9217_driver.h  es8311_driver.c  es8311_driver.h  lcd_driver.c  lcd_driver.h  motor_driver.c  motor_driver.h  pi4io_driver.c  pi4io_driver.h  py32_driver.c  py32_driver.h  rx8130ce.c  rx8130ce.h  system_utils.c  system_utils.h  time_utils.c  time_utils.h  touch_driver.c  touch_driver.h
(+34 files in other folders)
